--- a/indecision-app/public/index.html
+++ b/indecision-app/public/index.html
@@ -5,6 +5,9 @@
         <title>Indecision App</title>
     </head>
     <body>
-        This is some sample text for the HTML file.
+        <!-- Created React template will render data within body tags -->
+        <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
+        <script src="/scripts/app.js"></script>
     </body>
 </html>
